# CompilersProject1

./: .dfaAutomata.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  dfaAutomata.txt  nfaAutomata.txt  project1
lib/: AutomataState.cpp  AutomataState.h  Lexer.cpp  Lexer.h  utilities.cpp  utilities.h
src/: main.cpp  testSuite.cpp  testSuite.h
